--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".View.UserProfileActivity">
+    android:background="@drawable/background_mustard_black">
 
     <ImageView
         android:id="@+id/imageViewProfile"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/googleg_disabled_color_18"
+        android:src="@drawable/ic_account"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"/>
 
@@ -19,6 +19,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cambiar Foto"
+        android:textStyle="bold"
+        android:backgroundTint="#000000"
+        android:textColor="@color/white"
         android:layout_below="@id/imageViewProfile"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"/>
@@ -46,6 +49,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Guardar Cambios"
+        android:textStyle="bold"
+        android:backgroundTint="#000000"
+        android:textColor="@color/white"
         android:layout_below="@id/editTextEmail"
         android:layout_marginTop="16dp"/>
 
